--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formkit/tempo": "^0.1.2",
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-query": "^5.65.0",
     "@tanstack/react-query-devtools": "^5.65.0",
