--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_APP_NAME = 'Evolvenx'
 NEXT_PUBLIC_API_USERS_URL = 'https://49igqwrwc7.execute-api.us-east-1.amazonaws.com/master'
+NEXT_PUBLIC_API_CONFIG_URL = 'https://qswcjs9xg3.execute-api.us-east-1.amazonaws.com/master'
 NEXT_PUBLIC_STAGE = 'dev'
