--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,4 @@ NEXT_PUBLIC_APP_NAME = 'Evolvenx'
 NEXT_PUBLIC_API_USERS_URL = 'https://49igqwrwc7.execute-api.us-east-1.amazonaws.com/master'
 NEXT_PUBLIC_API_CONFIG_URL = 'https://qswcjs9xg3.execute-api.us-east-1.amazonaws.com/master'
 NEXT_PUBLIC_STAGE = 'dev'
+NEXT_PUBLIC_API_WEBSOCKET_NOTIFICATION = 'wss://klhd6v5r4e.execute-api.us-east-1.amazonaws.com/master/'
